--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 default: &default
   adapter: postgresql
-  username: yuzhva
-  password: 233223
+  username: gra1
+  password:
   host: localhost
   encoding: utf8
   pool: 12
